--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h4>Привет! Рад что ты его отсканировала)</h4>
     <a class="vk"href="https://vk.com/nikita1017">я в VK</a>
     <a class="Telegram"href="https://t.me/Nikita1017e">Я в Telegram</a>
-    <h3>Буду рад с ттобой пообщяться: 89228493795</h3>
+    <h3>Буду рад с тобой пообщяться: 89228493795</h3>
 </body>
 </html>
